# reperm_gen

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
scripts/: non_unique_plot.py
src/: lib.rs  macros.rs  main.rs  reuse.rs
src/generator/: gen.rs  generator.rs  periodic.rs
src/graph/: action_graph.rs  cayley_graph.rs
src/group/: cycle.rs  group.rs  symmetric.rs
src/group_theory/: cycle.rs  group.rs  symmetric.rs
src/locality/: chainfind.rs  reuse.rs
src/math/: combinations.rs
