[package]
name = "reperm_gen"
version = "0.1.0"
edition = "2021"

[dependencies]
bimap = "0.6.3"
clap = { version = "4.5.13", features = ["derive"] }
permutohedron = "0.2.4"
petgraph = "0.6.4"
rayon = "1.10.0"
serde = { version = "1.0.204", features = ["derive", "serde_derive"] }
serde_json = "1.0.122"
tracing = "0.1.40"

[profile.release]
debug = true
opt-level = 3  # Highest level of optimizations
codegen-units = 1  # Better optimizations at the cost of compilation time
lto = true  # Link Time Optimization
